[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/circle1_n.png" type="Texture" id=1]
[ext_resource path="res://objects/colour.shader" type="Shader" id=2]
[ext_resource path="res://objects/Circle.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/audio/89.ogg" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/colour = Color( 1, 1, 1, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 136.143

[sub_resource type="Animation" id=3]
resource_name = "Brightness Loop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1.1, 1 ), Color( 1, 1, 1.5, 1 ), Color( 1, 1, 1.1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.9, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteEffect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 4 )

[node name="Circle" type="Area2D" groups=[
"circles",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1.18, 1 )
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="OrbitPosition" type="Position2D" parent="Pivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Brightness Loop"
"anims/Brightness Loop" = SubResource( 3 )
anims/Capture = SubResource( 4 )
anims/Implode = SubResource( 5 )

[node name="SpriteEffect" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.729412 )
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MoveTween" type="Tween" parent="."]

[connection signal="tween_completed" from="MoveTween" to="." method="set_tween"]
